# appleseed

./: .appveyor.yml  .clang-format  .editorconfig  .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  LICENSE.txt  Moving Frame::write() and Frame::archive() into separate classes  README.md  README.rnd  README.txt  THIRDPARTIES.txt  review.txt  travis-ci-build.sh
src/: .gitignore  CMakeLists.txt  config.linux64-gcc4.txt  config.mac32-gcc4.txt  config.win32-vs100.txt  config.win32-vs90.txt
src/STANN/: Makefile  Makefile.vc++  README.txt  test.cpp
src/STANN/ANN/: Copyright.txt  Make-config  Makefile  ReadMe.txt  main.cpp
src/STANN/docs/: Doxyfile
src/STANN/include/: ANN_W.hpp  assert.hpp  bruteNN.hpp  bsearch.hpp  compute_bounding_box.hpp  const.hpp  dpoint.hpp  filter_kruskal.hpp  int_partition.hpp  nnBase.hpp  pair_iter.hpp  predicates.hpp  pwspd.hpp  qknn.hpp  rand.hpp  sep_float.hpp  sfcnn.hpp  sfcnn_ip.hpp  sfcnn_knng.hpp  test.hpp  timer.hpp  zorder_lt.hpp  zorder_type_traits.hpp
src/alembic/: CMakeLists.txt  README  patch-franz-vs2013-20131113.diff
src/appleseed/: CMakeLists.txt  libappleseed.map
src/appleseed.bench/: CMakeLists.txt
src/appleseed.bench/main/: main.cpp  windowsapp.manifest
src/appleseed.bench/mainwindow/: applicationsettingswindow.cpp  applicationsettingswindow.h  applicationsettingswindow.ui  constants.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  rankingswindow.cpp  rankingswindow.h  rankingswindow.ui  renderingtimedisplay.cpp  renderingtimedisplay.h  scalingtestparams.h  throttlingtestparams.h
src/appleseed.bench/resources/: resources.qrc  windows_resources.rc
src/appleseed.bench/utility/: .gitignore  backendapi.cpp  backendapi.h  encryptionkey.cpp.in  encryptionkey.h  formatrendertime.h  settingskeys.h  systeminfo.cpp  systeminfo.h  windowbase.cpp  windowbase.h
src/appleseed.cli/: CMakeLists.txt  commandline.cpp  commandline.h  commandlinehandler.cpp  commandlinehandler.h  continuoussavingtilecallback.cpp  continuoussavingtilecallback.h  houdinitilecallbacks.cpp  houdinitilecallbacks.h  houtilecallbacks.cpp  houtilecallbacks.h  main.cpp  progresstilecallback.cpp  progresstilecallback.h  stdouttilecallback.cpp  stdouttilecallback.h  superlogger.cpp  superlogger.h  windowsapp.manifest
src/appleseed.common/: CMakeLists.txt
src/appleseed.common/application/: application.cpp  application.h  commandlinehandlerbase.cpp  commandlinehandlerbase.h  progresstilecallback.cpp  progresstilecallback.h  superlogger.cpp  superlogger.h
src/appleseed.py/: CMakeLists.txt  __init__.py  bind_assembly.cpp  bind_auto_release_ptr.h  bind_bbox.cpp  bind_bsdf.cpp  bind_camera.cpp  bind_color.cpp  bind_edf.cpp  bind_entity.cpp  bind_environment.cpp  bind_frame.cpp  bind_image.cpp  bind_light.cpp  bind_master_renderer.cpp  bind_material.cpp  bind_matrix.cpp  bind_mesh_object.cpp  bind_object.cpp  bind_project.cpp  bind_quaternion.cpp  bind_renderer_controller.cpp  bind_scene.cpp  bind_surface_shader.cpp  bind_texture.cpp  bind_tile_callback.cpp  bind_transform.cpp  bind_typed_entity_containers.hpp  bind_utility.cpp  bind_vector.cpp  dict2dict.cpp  dict2dict.hpp  module.cpp  py_utility.cpp  py_utility.hpp  tile_callback_factory.hpp
src/appleseed.py/foundation/: bind_auto_release_ptr.h  bind_foundation.cpp
src/appleseed.py/renderer/: bind_camera.cpp  bind_entity.cpp  bind_project.cpp  bind_renderer.cpp  py_utility.cpp  py_utility.hpp
src/appleseed.python/: .CMakeLists.txt.swp  CMakeLists.txt  TXConverter.py  __init__.py  bind_assembly.cpp  bind_auto_release_ptr.h  bind_bbox.cpp  bind_bsdf.cpp  bind_camera.cpp  bind_color.cpp  bind_display.cpp  bind_edf.cpp  bind_entity.cpp  bind_entity.cpp.autosave  bind_environment.cpp  bind_frame.cpp  bind_image.cpp  bind_light.cpp  bind_logger.cpp  bind_master_renderer.cpp  bind_material.cpp  bind_matrix.cpp  bind_mesh_object.cpp  bind_object.cpp  bind_project.cpp  bind_quaternion.cpp  bind_renderer_controller.cpp  bind_scene.cpp  bind_shadergroup.cpp  bind_surface_shader.cpp  bind_texture.cpp  bind_tile_callback.cpp  bind_transform.cpp  bind_typed_entity_containers.h  bind_utility.cpp  bind_vector.cpp  bindaov.cpp  bindappleseed.cpp  bindappleseedinfo.cpp  bindassembly.cpp  (+67 more)
src/appleseed.python/appleseed/: bindaov.cpp  bindcamera.cpp  bindentitycontainers.h  bindenvironment.cpp  bindlogger.cpp  bindobject.cpp  bindsurfaceshader.cpp  bindtexture.cpp  bindtilecallback.cpp  bindutility.cpp  unalignedmatrix44.h  unalignedtransform.h
src/appleseed.python/studio/: __init__.py  helpers.py  plugins.py  ui.py
src/appleseed.python/test/: runtests-v140-debug.bat  runtests.py  testbasis.py  testdict2dict.py  testentitymap.py  testentityvector.py
src/appleseed.qtcommon/: CMakeLists.txt
src/appleseed.qtcommon/project/: projectmanager.cpp  (+1 more)
src/appleseed.shaders/: CMakeLists.txt  as_osl_extensions.h.in  stdosl.h
src/appleseed.shared/: CMakeLists.txt
src/appleseed.studio/: CMakeLists.txt
src/bcd/: CMakeLists.txt
src/boost/: README.txt  bootstrap.bat  build-win32.vs90.bat
src/cmake/: utilities.txt
src/hdf5/: CMakeLists.txt  COPYING  CTestConfig.cmake  MANIFEST  Makefile.am  Makefile.dist  Makefile.in  README.txt  aclocal.m4  acsite.m4  configure  configure.in
src/libpng/: ANNOUNCE  CHANGES  INSTALL  KNOWNBUG  LICENSE  README  Y2KINFO  configure  libpng-1.2.26.txt  libpng.3  libpngpf.3  png.5  png.c  png.h  pngmem.c  pngpread.c  pngrtran.c  pngrutil.c  pngset.c  pngtest.c  pngwrite.c  pngwutil.c
src/lz4/: CMakeLists.txt  bench.c  bench.h  fullbench.c  lz4.c  lz4.h  lz4c.c  lz4hc.c
src/minilzo/: CMakeLists.txt
src/openexr/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  OpenEXR.pc.in  README.OSX  README.win32  acinclude.m4  aclocal.m4  bootstrap  configure  configure.ac  openexr.m4
src/rply/: rply.c
src/templates/: benchmark_template.cpp  component_template.cpp  component_template.h  test_template.cpp
src/xerces-c/: INSTALL  KEYS  LICENSE.txt  Makefile.am  Makefile.in  Readme.html  STATUS  config.h.in  configure  configure.ac  credits.txt  version.incl  xerces-c.pc.in  xerces-c.spec
(+24912 files in other folders)
